--- a/src/app/components/administration-sign-in/administration-sign-in.component.html
+++ b/src/app/components/administration-sign-in/administration-sign-in.component.html
@@ -16,5 +16,9 @@
 <div class="adminCoverDiv">
     <div class="adminDesktopDiv"></div>
     <br><br><br><br><br><br><br><br><br><br>
-    <h1 class="welcomeh1"> Welcome ! </h1>
+    <header>
+        <div class="overlay">
+            <h1>Welcome To Administration Area</h1>
+        </div>
+    </header>
 </div>
