--- a/src/app/components/discount/discount.component.html
+++ b/src/app/components/discount/discount.component.html
@@ -1,1 +1,155 @@
+<div class="roadImgDiv">
+    <div class="SubmitOrderDiv">
+        <form class="form-inline" #SubmitOrderForm="ngForm">
+            <h6>Fill in your order Details</h6>
+            <hr>
+            <div class="form-group">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="idBTNImg" (click)="GetUser(order.userId!)"></button>
+                </div>
+                <input id="UserIdentificationNumberInput" type="text" pInputText
+                    placeholder="User Identification Number" [(ngModel)]="order.userId"
+                    class="form-control is-invalid is-valid" name="UserIdentificationNumber" required pattern="[0-9]+"
+                    #UserIdentificationNumberInfo="ngModel" maxlength="50" minlength="9"
+                    [ngClass]="{'is-invalid': UserIdentificationNumberInfo.errors && UserIdentificationNumberInfo.touched, 'is-valid': UserIdentificationNumberInfo.valid}">
+                <div class="invalid-feedback" id="invalid-feedback-UserIdentificationNumber-Required"
+                    [hidden]="!UserIdentificationNumberInfo.errors?.required">
+                    User Identification Number Required
+                </div>
+                <div class="invalid-feedback"
+                    id="invalid-feedback-UserIdentificationNumber-Must-be-9-characters-AND-Numbers-only"
+                    [hidden]="!UserIdentificationNumberInfo.errors?.minlength && !UserIdentificationNumberInfo.errors?.pattern">
+                    Must be 9 characters / Numbers Only
+                </div>
+                <div class="valid-feedback" id="valid-feedback-UserIdentificationNumber-ok"
+                    [hidden]="UserIdentificationNumberInfo.invalid">
+                    Okay!
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary calendar" (click)="sd.toggle()" type="button"></button>
+                    </div>
+                    <input id="startDate" type="text" ngbDatepicker placeholder="Start Date"
+                        [(ngModel)]="order.startDate" class="form-control is-invalid is-valid" name="dp-startDate"
+                        required #sd="ngbDatepicker" #startDateInfo="ngModel"
+                        [ngClass]="{'is-invalid': startDateInfo.errors && startDateInfo.touched, 'is-valid': startDateInfo.valid}"
+                        (change)="setStartDate($event)" (dateSelect)="onStartDateSelect($event)">
+                        
+                    <div class="invalid-feedback" id="invalid-feedback-startDate-Required"
+                        [hidden]="!startDateInfo.errors?.required">
+                        Start Date Required
+                    </div>
+                    <div class="valid-feedback" id="valid-feedback-startDate-ok" [hidden]="startDateInfo.invalid">
+                        Okay!
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary calendar" (click)="ed.toggle()" type="button"></button>
+                    </div>
+                    <input id="EndDate" type="text" ngbDatepicker placeholder="End Date" [(ngModel)]="order.endDate"
+                        class="form-control is-invalid is-valid" name="dp-endDate" required #ed="ngbDatepicker"
+                        #endDateInfo="ngModel"
+                        [ngClass]="{'is-invalid': endDateInfo.errors && endDateInfo.touched, 'is-valid': endDateInfo.valid}"
+                        (change)="setEndDate($event)" (dateSelect)="onEndDateSelect($event)">
+                        
+                    <div class="invalid-feedback" id="invalid-feedback-endDate-Required"
+                        [hidden]="!endDateInfo.errors?.required">
+                        End Date Required
+                    </div>
+                    <div class="valid-feedback" id="valid-feedback-endDate-ok" [hidden]="endDateInfo.invalid">
+                        Okay!
+                    </div>
+                </div>
+            </div>
+            <div class="flex-container-total">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary calendar" id="totalIMg" type="button"></button>
+                </div>
+                <div class="p-inputgroup">
+                    <input type="text" value="Total of {{TotalRentalDays(order.startDate!, order.endDate!)}} days" pInputText
+                        placeholder="Total number of rental days" disabled="true">
+                </div>
+            </div>
+            <div class="spacerDiv"></div>
+            <div class="form-group">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="vinBTNImg"
+                        (click)="GetCar(order.vin!)"></button>
+                </div>
+                <input id="VehicleIdentificationNumberInput" type="text" [(ngModel)]="order.vin"
+                    class="form-control is-invalid is-valid flex-feedback" name="VehicleIdentificationNumber" required
+                    pattern="[0-9]+" #VehicleIdentificationNumberInfo="ngModel"
+                    placeholder="Vehicle Identification Number..." maxlength="50"
+                    [ngClass]="{'is-invalid': VehicleIdentificationNumberInfo.errors && VehicleIdentificationNumberInfo.touched,'is-valid': VehicleIdentificationNumberInfo.valid}">
+                <div class="invalid-feedback" id="invalid-feedback-Vehicle-Identification-Number-required"
+                    [hidden]="!VehicleIdentificationNumberInfo.errors?.required">
+                    Vehicle Identification Number is required
+                </div>
+                <div class="invalid-feedback" id="invalid-feedback-Vehicle-Identification-Number-Numbers-only"
+                    [hidden]="!VehicleIdentificationNumberInfo.errors?.pattern">
+                    Numbers only
+                </div>
+                <div class="valid-feedback" id="valid-feedback-Vehicle-Identification-Number-Okay"
+                    [hidden]="VehicleIdentificationNumberInfo.invalid">
+                    Okay!
+                </div>
+            </div>
 
+            <div class="flex-container-total">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary calendar" id="totalCostIMg" type="button" ></button>
+                </div>
+                <div class="p-inputgroup">
+                    <input type="text" pInputText placeholder="Total Cost" disabled="true"
+                        value="{{CalculateTotalPrice()}}$" #priceInfo>
+                </div>
+            </div>
+            <div class="warningPopUp"> 
+                <ngb-alert class="mt-3 mb-0 ngbPopUP" type="info" [dismissible]="false" [hidden]="!VehicleIdentificationNumberInfo.touched || VehicleIdentificationNumberInfo.errors">
+                    Warning: there is a fee of {{carType.delayCost}}$ for every day you extend your rental period for the selected car...
+                </ngb-alert>
+            </div>
+        </form>
+        <div class="btnDiv">
+            <button pButton pRipple type="button" label="Submit" class="p-button-raised"
+            [disabled]="SubmitOrderForm.form.invalid" (click)="SubmitOrder()"></button>
+        </div>
+    </div>
+    
+    <div class="carouselDiv">
+        <ngb-carousel *ngIf="images">
+            <ng-template ngbSlide>
+                <div class="picsum-img-wrapper">
+                    <img [src]="images[0]" alt="Random first slide" [style]="{'width':'550px','height':'500px'}">
+                </div>
+                <div class="carousel-caption">
+                    <h3>Honda Civic</h3>
+                    <p>Special offer.</p>
+                </div>
+            </ng-template>
+            <ng-template ngbSlide>
+                <div class="picsum-img-wrapper">
+                    <img [src]="images[1]" alt="Random second slide" [style]="{'width':'550px','height':'500px'}">
+                </div>
+                <div class="carousel-caption">
+                    <h3>Hyundai Tucson</h3>
+                    <p>For a special experience for you and your family.</p>
+                </div>
+            </ng-template>
+            <ng-template ngbSlide>
+                <div class="picsum-img-wrapper">
+                    <img [src]="images[2]" alt="Random third slide" [style]="{'width':'550px','height':'500px'}">
+                </div>
+                <div class="carousel-caption">
+                    <h3>Hyundai Tucson</h3>
+                    <p>Newest cars for the best experience.</p>
+                </div>
+            </ng-template>
+        </ngb-carousel>
+    </div>
+</div>
