--- a/src/app/components/agents-sign-in/agents-sign-in.component.html
+++ b/src/app/components/agents-sign-in/agents-sign-in.component.html
@@ -1,21 +1,87 @@
 <div class="adminCoverDiv"></div>
-
 <div class="adminDesktopDiv">
-    <form [formGroup]="oppoSuitsForm" (ngSubmit)="onSubmit()">
-
-        <select formControlName="name" (change)="changeSuit($event)">
-          <option value=""> Manage Cars </option>
-          <option *ngFor="let suit of oppoSuits">{{suit}}</option>
-        </select>
-      
-        <div class="error-block" *ngIf="submitted && handleError('name', 'required')">
-          You must provide a value!
+    <div class="agentMainMenu">
+        <div class="s003">
+            <form>
+                <div class="inner-form">
+                    <div class="input-field second-wrap">
+                        <input id="search" type="text" placeholder="Enter vehicle identification number"
+                            (change)="GetIpnut($event)" />
+                    </div>
+                    <div class="input-field third-wrap">
+                        <button class="btn-search" type="button" (click)="GetCar(inputID)">
+                            <svg class="svg-inline--fa fa-search fa-w-16" aria-hidden="true" data-prefix="fas"
+                                data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                <path fill="currentColor"
+                                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z">
+                                </path>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
-      
-        <button>Submit</button>
-      </form>
-
-      <div class="someform">
-          
-      </div>
+        <table>
+            <tr>
+                <div class="headerCarDiv">
+                    <th id="headerCarTh">
+                        <p id="carModelP">{{car.manufacturer!}} {{car.model!}} {{car.yearOfManufacture!}} {{car.gearBox! | uppercase}}</p>
+                    </th>
+                </div>
+            </tr>
+            <tr>
+                <th>
+                    <img src="{{ImageCarsURL! + fileName!}}">
+                </th>
+            </tr>
+            <br>
+            <tr>
+                <th>
+                    <div class="editDiv">
+                        <p id="kilometrageLBL">Current Kilometrage:</p>
+                        <p id="kilometrageinfo">{{car.kilometrage | number:""}}</p><button pButton type="button"
+                            label="Edit" class="p-button-warning"></button>
+                    </div>
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    <div class="editDiv">
+                        <p id="Vehicle-identification-numberLBL">Vehicle identification number:</p>
+                        <p id="Vehicle-identification-number-info">{{car.vin}}</p><button pButton type="button"
+                            label="Edit" class="p-button-warning"></button>
+                    </div>
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    <div class="editDiv">
+                        <p id="BranchNameLBL">Branch Name:</p>
+                        <p id="BranchNameinfo">{{car.branchName}}</p>
+                        <button pButton type="button" label="Edit" class="p-button-warning"></button>
+                    </div>
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    <div class="editDiv">
+                        <p id="AvailabilityLBL">Availability:</p>
+                        <p id="Availabilityinfo"><img src="{{ImageCarsURL + AvailabilityStatus}}"
+                                class="availability-img"></p>
+                        <button pButton type="button" label="Edit" class="p-button-warning"></button>
+                    </div>
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    <div class="editDiv">
+                        <p id="UsabilityLBL">Usability:</p>
+                        <p id="Usabilityinfo"><img src="{{ImageCarsURL + UsabilityStatus}}" class="Usability-img"></p>
+                        <button pButton type="button" label="Edit" class="p-button-warning"></button>
+                    </div>
+                </th>
+            </tr>
+        </table>
+    </div>
 </div>
+
