--- a/src/app/components/car-type/car-type.component.html
+++ b/src/app/components/car-type/car-type.component.html
@@ -18,17 +18,26 @@
 
 <div class="adminCoverDiv">
     <div class="carTypeFormContentDiv">
-
-            <nav class="navbar navbar-light bg-light">
-                <div class="container-fluid">
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search"
-                            placeholder="Enter Vehicle Type..." aria-label="Search"
-                            (change)="onTextChange($event)">
-                        <button class="btn btn-outline-success" type="submit"> Search </button>
-                    </form>
+        <div class="s003">
+            <form>
+                <div class="inner-form">
+                    <div class="input-field second-wrap">
+                        <input id="search" type="text" placeholder="Enter Manufacturer name..."
+                            (change)="onTextChange($event)" />
+                    </div>
+                    <div class="input-field third-wrap">
+                        <button class="btn-search" type="button">
+                            <svg class="svg-inline--fa fa-search fa-w-16" aria-hidden="true" data-prefix="fas"
+                                data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                <path fill="currentColor"
+                                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z">
+                                </path>
+                            </svg>
+                        </button>
+                    </div>
                 </div>
-            </nav>
+            </form>
+        </div>
 
         <div class="carTypeFormContentMainDiv">
             <table>
@@ -38,19 +47,19 @@
                     <th> Model </th>
                     <th> Daily Cost </th>
                     <th> Delay Cost </th>
-                    <th> Year Of Manufacture </th>
+                    <th> Manufacture Year </th>
                     <th> Gear Box </th>
                 </tr>
                 <tr *ngFor="let ct of CarTypes" (click)="Selected(ct.carTypeId)" tabindex="0">
                     <td>
                         <img src="{{ImageCarsTypeURL + ct.iconFileName}}" width="100px" height="100px">
                     </td>
-                    <td> {{ct.manufacturer}} </td>
-                    <td> {{ct.model}} </td>
+                    <td> {{ct.manufacturer | titlecase}} </td>
+                    <td> {{ct.model | titlecase}} </td>
                     <td> {{ct.dailyCost  | currency:"ILS":true}} </td>
                     <td> {{ct.delayCost  | currency:"ILS":true}} </td>
                     <td> {{ct.yearOfManufacture}} </td>
-                    <td> {{ct.gearBox}} </td>
+                    <td> {{ct.gearBox | titlecase}} </td>
                 </tr>
             </table>
         </div>
