--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -18,17 +18,26 @@
 
 <div class="adminCoverDiv">
     <div class="carFormContentDiv">
-
-            <nav class="navbar navbar-light bg-light">
-                <div class="container-fluid">
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search"
-                            placeholder="Enter Vehicle Identification number..." aria-label="Search"
-                            (change)="onTextChange($event)">
-                        <button class="btn btn-outline-success" type="submit"> Search </button>
-                    </form>
+        <div class="s003">
+            <form>
+                <div class="inner-form">
+                    <div class="input-field second-wrap">
+                        <input id="search" type="text" placeholder="Enter vehicle identification number"
+                            (change)="onTextChange($event)" />
+                    </div>
+                    <div class="input-field third-wrap">
+                        <button class="btn-search" type="button">
+                            <svg class="svg-inline--fa fa-search fa-w-16" aria-hidden="true" data-prefix="fas"
+                                data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                <path fill="currentColor"
+                                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z">
+                                </path>
+                            </svg>
+                        </button>
+                    </div>
                 </div>
-            </nav>
+            </form>
+        </div>
 
         <div class="carFormContentMainDiv">
             <table>
@@ -36,8 +45,8 @@
                     <th> Image </th>
                     <th> Manufacturer </th>
                     <th> Model </th>
-                    <th> Year Of Manufacture </th>
-                    <th> Current Kilometrage </th>
+                    <th> Manufacture Year </th>
+                    <th> Kilometrage </th>
                     <th> VIN </th>
                     <th> Branch </th>
                     <th> GearBox </th>
@@ -48,15 +57,15 @@
                     <td>
                         <img src="{{ImageCarsURL + c.imageFileName}}">
                     </td>
-                    <td> {{c.manufacturer}} </td>
-                    <td> {{c.model}} </td>
+                    <td> {{c.manufacturer | titlecase}} </td>
+                    <td> {{c.model | titlecase}} </td>
                     <td> {{c.yearOfManufacture}} </td>
-                    <td> {{c.kilometrage}} </td>
+                    <td> {{c.kilometrage | number:''}} </td>
                     <td> {{c.vin}} </td>
                     <td> {{c.branchName}} </td>
-                    <td> {{c.gearBox}} </td>
-                    <td> {{c.availability}} </td>
-                    <td> {{c.usability}} </td>
+                    <td> {{c.gearBox | uppercase}} </td>
+                    <td> {{c.availability | uppercase}} </td>
+                    <td> {{c.usability | uppercase}} </td>
                 </tr>
             </table>
         </div>
