--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -1,5 +1,4 @@
 .porsheCoverDiv {
-    border: solid black 1px;
     width: 100%;
     height: 250px;
     background-image: url(../../../assets/1584436900458.jfif);
@@ -17,7 +16,7 @@
 }
 .directionsCarDiv, .priceCarDiv, .hassleCarDiv, .expertCarDiv {
     position: relative;
-    border: white solid 1px;
+    border: none;
     width: 300px;
     height: 60px;
     top: 10px;
@@ -45,6 +44,63 @@
 }
 
 .descriptionDiv {
+    display: flex;
+    background-color: #FFFFFF;
     width: 100%;
     height: 500px;
+}
+.carouselDiv {
+    width: 35%;
+    height: 499px;
+    border: none;
+}
+.r4wDescription {
+    background-image: url(../../../assets/descriptionCover.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 65%;
+    height: 500px;
+    border: none;
+}
+
+*{padding: 0; margin: 0; box-sizing: border-box;}
+body{height: 900px;}
+header {
+	text-align: center;
+	width: 100%;
+	height: 40%;
+	background-size: cover;
+	background-attachment: fixed;
+	position: relative;
+	overflow: hidden;
+	border-radius: 0 0 85% 85% / 30%;
+}
+header .overlay{
+	width: 100%;
+	height: 100%;
+	padding: 5px;
+	color: #FFF;
+	text-shadow: 1px 1px 1px #333;
+  background-image: linear-gradient( 135deg, #566D7E 10%,#6D7B8D 100%);
+	opacity: 0.8;
+}
+h1 {
+	font-family: 'Dancing Script', cursive;
+	font-size: 80px;
+	margin-bottom: 30px;
+}
+h3 {
+	font-family: 'Open Sans', sans-serif;
+	margin-bottom: 30px;
+}
+
+.pointersDiv {
+    position: relative;
+    left: 15px;
+    bottom: -20px;
+    color: white;
+    width: 500px;
+    height: 250px;
+    text-align: start;
 }
